# habituating-server

./: .env.example  .gitignore  Dockerfile  browser_agent.py  conductor-setup.sh  conductor.json  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run-sync.py  test_complete_workflow.py  test_due_date_extraction.py  test_due_date_results.json  test_everything.py  test_idempotent.py  test_simple.py
entities/fastapi/: schema_public_latest.py
services/: assignment_extractor.py  due_date_finder.py  scraper_v2.py
services/utils/: content_hasher.py  db_helpers.py
temporal/: config.py  shared.py  test_connection.py
temporal/courses/: activities.py  run_worker.py  run_worker_debug.py  run_workflow.py  workflows.py
temporal/courses/tests/: test_workflows.py
temporal/simple/: run_worker_simple.py  run_workflow_simple.py  simple_activities.py  simple_workflows.py
test/: due_dates.json  due_dates.py  scraped_tree.json  test.py  unique.py  unique_assignments.json
